[package]
name = "cargo-condep"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/burbokop/cargo-condep"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
regex = "1"
clap = { version = "3.1.5", features = ["derive"] }
termion = "1.5.6"
num_cpus = "1.13.1"
ssh = "0.1.4"
toml = "0.5.8"
serde_yaml = "0.8.23"
dirs = "4.0.0"